--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,7 +8,7 @@ jobs:
   build: 
     env: 
       CI: true
-    stragegy:
+    strategy:
         matrix: 
           node-version: [16.x, 14.x]
     runs-on: ubuntu-latest
